Updated object datamodel

--- a/skooog/priv/gettext/sv_SE/LC_MESSAGES/errors.po
+++ b/skooog/priv/gettext/sv_SE/LC_MESSAGES/errors.po
@@ -12,7 +12,7 @@ msgstr ""
 
 ## From Ecto.Changeset.cast/4
 msgid "can't be blank"
-msgstr ""
+msgstr "måste vara ifyllt"
 
 ## From Ecto.Changeset.unique_constraint/3
 msgid "has already been taken"
@@ -20,7 +20,7 @@ msgstr ""
 
 ## From Ecto.Changeset.put_change/3
 msgid "is invalid"
-msgstr ""
+msgstr "är felaktig"
 
 ## From Ecto.Changeset.validate_acceptance/3
 msgid "must be accepted"
@@ -28,7 +28,7 @@ msgstr ""
 
 ## From Ecto.Changeset.validate_format/3
 msgid "has invalid format"
-msgstr ""
+msgstr "har ogilitigt format"
 
 ## From Ecto.Changeset.validate_subset/3
 msgid "has an invalid entry"
